src/test/ui/issues/issue-4265.stderr
error[E0592]: duplicate definitions with name `bar`
  --> $DIR/issue-4265.rs:10:5
   |
LL |     fn bar() {
   |     -------- other definition for `bar`
...
LL |     fn bar() {
   |     ^^^^^^^^ duplicate definitions for `bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0592`.
